# VibeSensor

./: .coverage  .dockerignore  .gitattributes  .gitignore  .rgignore  .secrets.act.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN_CHUNK_1.md  PLAN_CHUNK_2.md  PLAN_CHUNK_3.md  PLAN_CHUNK_4.md  PLAN_CHUNK_5.md  README.md  SECURITY.md  TEST_SUITE_OPTIMIZATION.md  _codeql_detected_source_root  _plan_chunk1.md  _plan_chunk2.md  _plan_chunk3.md  _plan_chunk4.md  _plan_chunk5.md  chunk1_plan.md  chunk2_plan.md  chunk3_plan.md  chunk4_plan.md  chunk5_plan.md  docker-compose.dev.yml  docker-compose.yml  esp  pi  pytest.ini  ui
apps/server/: AGENTS.md  Dockerfile  Dockerfile.e2e  README.md  config.dev.yaml  config.docker.yaml  config.example.yaml  config.pi.yaml  config.yaml  pyproject.toml  requirements-docker.txt  wifi-secrets.example.env
apps/server/data/: CAR_VARIANT_SOURCES.md  car_library.json  car_library_ratio_sources.json  report_i18n.json  settings.json
apps/server/data/scripted_scenarios/: driveline-coastdown.yaml  lane-change-left-right.yaml  pothole-recovery-loop.yaml  rear-left-cruise-rumble.yaml
apps/server/scripts/: hotspot_nmcli.sh  hotspot_self_heal.py  install_pi.sh  run_dev.sh  vibesensor_obd_admin.py  vibesensor_update_sudo.sh  wifi_export_logs.sh
apps/server/systemd/: vibesensor-hotspot-self-heal.service  vibesensor-hotspot-self-heal.timer  vibesensor-hotspot.service  vibesensor-rfkill-unblock.service  vibesensor.service
apps/server/tests/: AGENTS.md  _paths.py  _report_analysis_integration_helpers.py  _report_helpers.py  _scenario_ground_truth_helpers.py  _scenario_regression_helpers.py  _test_helpers.py  builders.py  conftest.py  test_20_bug_fixes.py  test_ai_smoke.py  test_analysis_architecture.py  test_analysis_persistence.py  test_analysis_settings.py  test_analysis_settings_source_of_truth.py  test_analysis_units_db_only.py  test_api_history_endpoints.py  test_api_response_models.py  test_app_lifecycle.py  test_bug_fixes.py  test_build_ws_payload.py  test_car_library.py  test_car_profile_variations.py  test_car_variants.py  test_certainty_tier.py  test_clipping_and_saturation.py  test_common_vibration_causes.py  test_compute_effective_match_rate.py  test_confidence_threshold_boundaries.py  test_config.py  test_config_extended.py  test_config_validation.py  test_contradictory_phase_signals.py  test_coverage_gap_audit.py  test_cycle10_fixes.py  test_cycle11_fixes.py  test_cycle12_fixes.py  test_cycle13_fixes.py  test_cycle14_fixes.py  test_cycle15_fixes.py  (+118 more)
apps/server/tests/analysis/: _diagnosis_robustness_helpers.py  _phased_scenario_helpers.py  test_analysis_architecture.py  test_analysis_helpers_gaps.py  test_analysis_persistence.py  test_analysis_pipeline_audit.py  test_analysis_pipeline_guard_regressions.py  (+52 more)
apps/server/tests_e2e/: _docker_edge_helpers.py  _docker_wheel_fault_helpers.py  conftest.py  e2e_helpers.py  test_e2e_docker_client_locations.py  test_e2e_docker_crud.py  test_e2e_docker_edge_cases.py  test_e2e_docker_engine_order_fault.py  test_e2e_docker_exports.py  test_e2e_docker_history_status.py  test_e2e_docker_pdf_accuracy.py  test_e2e_docker_rear_left_wheel_fault.py  test_e2e_docker_recording_lifecycle.py  test_e2e_docker_run_quality.py  test_e2e_docker_runtime_settings.py  test_e2e_docker_user_journeys.py
apps/server/vibesensor/: BOUNDARIES.md  __init__.py  _config_defaults.py  _data_files.py  _version.py  analysis_persistence.py  analysis_settings.py  api.py  api_models.py  app.py  backend_types.py  bootstrap.py  car_library.py  coerce.py  config.py  config_preflight.py  constants.py  contract_reference_doc.py  contracts.py  diagnostics_shared.py  domain_models.py  esp_flash_manager.py  exceptions.py  firmware_cache.py  gps_speed.py  history_db.py  history_exports.py  history_helpers.py  history_reports.py  history_runs.py  hotspot_parsers.py  hotspot_self_heal.py  hotspot_self_heal_steps.py  http_api_schema_export.py  json_types.py  json_utils.py  live_diagnostics.py  locations.py  metrics_log.py  order_bands.py  (+29 more)
libs/core/python/: pyproject.toml
libs/shared/python/: pyproject.toml
pi/: Dockerfile  README.md  config.dev.yaml  config.docker.yaml  config.example.yaml  config.yaml  pyproject.toml
pi/data/: history.db-shm  history.db-wal
pi/public/: app.js  i18n.js  index.html  uplot.version.txt
pi/public/assets/: index-CXx0AyVY.css  index-DOXENTib.js
pi/scripts/: hotspot_nmcli.sh  hotspot_self_heal.py  install_pi.sh  run_dev.sh
pi/systemd/: vibesenser.service  vibesensor-hotspot.service  vibesensor.service
pi/tests/: test_analysis_settings.py  test_car_library.py  test_common_vibration_causes.py  test_config.py  test_config_extended.py  test_diagnostics_shared.py  test_diagnostics_shared_extended.py  test_gps_speed.py  test_gps_speed_extended.py  test_health_endpoint.py  test_history_simulated_runs.py  test_hotspot_self_heal.py  test_live_diagnostics_continuous.py  test_live_diagnostics_helpers.py  test_metrics_log_helpers.py  test_processing.py  test_processing_extended.py  test_protocol.py  test_registry.py  test_report_analysis_helpers.py  test_report_analysis_integration.py  test_reports.py  test_runlog.py  test_sensor_units.py  test_settings_store.py  test_single_source_of_truth.py  test_strength_bands_extended.py  test_strength_buckets.py  test_strength_scoring.py  test_strength_single_source_guards.py  test_udp_control_tx.py  test_ui_selenium.py  test_ws_hub.py
pi/vibesenser/: __init__.py  app.py  metrics_log.py  processing.py  udp_data_rx.py
pi/vibesensor/: __init__.py  analysis_settings.py  api.py  app.py  car_library.py  config.py  diagnostics_shared.py  gps_speed.py  hotspot_self_heal.py  live_diagnostics.py  locations.py  metrics_log.py  processing.py  protocol.py  registry.py  report_analysis.py  report_helpers.py  report_i18n.py  report_pdf.py  report_theme.py  reports.py  runlog.py  settings_store.py  strength_bands.py  strength_scoring.py  udp_control_tx.py  udp_data_rx.py  ws_hub.py
pi/vibesensor/analysis/: strength_metrics.py  vibration_strength.py
(+3570 files in other folders)
