[build-system]
requires = ["setuptools>=68,<83", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibesensor"
dynamic = ["version"]
description = "Offline Raspberry Pi vibration telemetry server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "numpy>=1.26,<2",
  "packaging>=24,<27",
  "PyYAML>=6,<7",
  "reportlab>=4,<5",
  "websockets>=12,<17",
]

[project.optional-dependencies]
esp = [
  "esptool>=4,<6",
]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.19,<2",
  "pypdf>=5,<7",
  "pypdfium2>=4.30,<6",
  "pytest>=8,<10",
  "pytest-asyncio>=0.23,<2",
  "pytest-cov>=6,<8",
  "pytest-timeout>=2,<3",
  "pytest-xdist>=3.6,<4",
  "rapidocr-onnxruntime>=1.4,<2",
  "ruff>=0.6,<1",
]

[project.scripts]
vibesensor-server = "vibesensor.cli.server:main"
vibesensor-report = "vibesensor.cli.report:main"
vibesensor-http-api-schema-export = "vibesensor.cli.http_api_schema_export:main"
vibesensor-hotspot-self-heal = "vibesensor.cli.hotspot_self_heal:main"
vibesensor-hotspot-config = "vibesensor.cli.hotspot_config:main"
vibesensor-sim = "vibesensor.adapters.simulator.sim_sender:main"
vibesensor-ws-smoke = "vibesensor.adapters.simulator.ws_smoke:main"
vibesensor-config-preflight = "vibesensor.cli.preflight:main"
vibesensor-fw-refresh = "vibesensor.use_cases.updates.firmware_cache:refresh_cache_cli"
vibesensor-fw-info = "vibesensor.use_cases.updates.firmware_cache:cache_info_cli"
vibesensor-release-fetch = "vibesensor.use_cases.updates.release_fetcher:fetch_latest_wheel_cli"

[tool.setuptools.dynamic]
version = {attr = "vibesensor._version.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
vibesensor = ["static/**", "data/*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vibesensor*"]

[tool.pytest.ini_options]
addopts = "-n auto --dist worksteal"
asyncio_mode = "auto"
timeout = 120
pythonpath = [".", "tests"]
testpaths = ["tests"]
markers = [
    "e2e: docker-based end-to-end tests",
    "long_sim: longer simulated-run tests (>20 s of synthetic data)",
    "smoke: minimal critical path checks",
]
filterwarnings = [
    "ignore:cannot collect test class 'TestRun':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestPlan':pytest.PytestCollectionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"vibesensor/adapters/pdf/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["vibesensor"]
follow_imports = "normal"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "reportlab.*",
  "yaml",
]
ignore_missing_imports = true
disallow_any_unimported = false
