[build-system]
requires = ["setuptools>=68,<83", "wheel>=0.46.3,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "vibesensor"
dynamic = ["version"]
description = "Offline Raspberry Pi vibration telemetry server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "numpy>=2.4.4,<3",
  "orjson>=3.11.4,<4",
  "packaging>=24,<27",
  "PyYAML>=6.0.3,<7",
  "reportlab>=4.4.10,<5",
  "websockets>=16,<17",
]

[project.optional-dependencies]
esp = [
  "esptool>=5.2.0,<6",
]
dev = [
  "hypothesis>=6.131,<7",
  "httpx>=0.27,<1",
  "mypy>=1.19,<2",
  "pypdf>=5,<7",
  "pypdfium2>=5.7.0,<6",
  "pytest>=8,<10",
  "pytest-asyncio>=0.23,<2",
  "pytest-cov>=7.1.0,<8",
  "pytest-timeout>=2.4.0,<3",
  "pytest-xdist>=3.8.0,<4",
  "rapidocr-onnxruntime>=1.4,<2; python_version < '3.13'",
  "rapidocr-onnxruntime>=1.2.3,<1.3; python_version >= '3.13'",
  "ruff>=0.15.10,<0.16",
]

[project.scripts]
vibesensor-server = "vibesensor.cli.server:main"
vibesensor-report = "vibesensor.cli.report:main"
vibesensor-http-api-schema-export = "vibesensor.cli.http_api_schema_export:main"
vibesensor-hotspot-self-heal = "vibesensor.cli.hotspot_self_heal:main"
vibesensor-hotspot-config = "vibesensor.cli.hotspot_config:main"
vibesensor-sim = "vibesensor.adapters.simulator.sim_sender:main"
vibesensor-ws-smoke = "vibesensor.adapters.simulator.ws_smoke:main"
vibesensor-config-preflight = "vibesensor.cli.preflight:main"
vibesensor-fw-refresh = "vibesensor.use_cases.updates.firmware.firmware_cache:refresh_cache_cli"
vibesensor-fw-info = "vibesensor.use_cases.updates.firmware.firmware_cache:cache_info_cli"
vibesensor-release-fetch = "vibesensor.use_cases.updates.releases.cli:fetch_latest_wheel_cli"

[tool.setuptools.dynamic]
version = {attr = "vibesensor._version.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
vibesensor = ["static/**", "data/*.json", "data/scripted_scenarios/*.yaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vibesensor*"]

[tool.pytest.ini_options]
addopts = "-n auto --dist worksteal"
asyncio_mode = "auto"
timeout = 120
# Keep tests/ importable so shared helpers use `from test_support...` short imports.
pythonpath = [".", "tests"]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests",
    "long_sim: longer simulated-run tests (>20 s of synthetic data)",
    "smoke: minimal critical path checks",
]
filterwarnings = [
    "ignore:cannot collect test class 'TestRun':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestPlan':pytest.PytestCollectionWarning",
]

[tool.ruff]
line-length = 100
# Backend Ruff formatting/lint stays on the packaged-server syntax floor
# (`requires-python >=3.13`) so the formatter does not emit syntax beyond the
# Raspberry Pi OS Lite (Trixie) runtime line. mypy tracks the exact native/CI
# Python minor from `.python-version` (`3.13` today) so type checking matches
# the active repo toolchain.
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"vibesensor/adapters/pdf/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
packages = ["vibesensor"]
follow_imports = "normal"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "reportlab.*",
  "yaml",
]
ignore_missing_imports = true
disallow_any_unimported = false
