[build-system]
requires = ["setuptools>=68,<83", "wheel>=0.46.3,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "vibesensor"
dynamic = ["version"]
description = "Offline Raspberry Pi vibration telemetry server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anyio>=4.11,<5",
  "aiosqlite>=0.21,<1",
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "msgspec>=0.19,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.10,<3",
  "starlette>=0.37.2,<2",
  "tenacity>=9.1,<10",
  "granian[reload]>=2.7,<3",
  "uvloop>=0.22,<1; sys_platform == 'linux'",
  "numpy>=2.4.4,<3",
  "opentelemetry-api>=1.38,<2",
  "opentelemetry-sdk>=1.38,<2",
  "scipy>=1.16.3,<2",
  "structlog>=25.4,<26",
  "orjson>=3.11.4,<4",
  "pyfftw>=0.15.1,<0.16",
  "packaging>=24,<27",
  "PyYAML>=6.0.3,<7",
  "reportlab>=4.4.10,<5",
  "websockets>=16,<17",
]

[project.optional-dependencies]
esp = [
  "esptool>=5.2.0,<6",
  "pyserial>=3.3,<4",
]
dev = [
  "deptry>=0.25,<0.26",
  "hypothesis>=6.131,<7",
  "import-linter>=2.11,<3",
  "jsonschema>=4.21,<5",
  "mypy>=1.19,<2",
  "pypdf>=5,<7",
  "pypdfium2>=5.7.0,<6",
  "pytest>=8,<10",
  "pytest-asyncio>=0.23,<2",
  "pytest-benchmark>=5.2,<6",
  "pytest-cov>=7.1.0,<8",
  "pytest-httpx>=0.35,<1",
  "pytest-randomly>=3.16,<5",
  "pytest-timeout>=2.4.0,<3",
  "pytest-xdist>=3.8.0,<4",
  "rapidocr-onnxruntime>=1.4,<2; python_version < '3.13'",
  "rapidocr-onnxruntime>=1.2.3,<1.3; python_version >= '3.13'",
  "ruff>=0.15.10,<0.16",
]

[project.scripts]
vibesensor-server = "vibesensor.cli.server:main"
vibesensor-report = "vibesensor.cli.report:main"
vibesensor-http-api-schema-export = "vibesensor.cli.http_api_schema_export:main"
vibesensor-hotspot-self-heal = "vibesensor.cli.hotspot_self_heal:main"
vibesensor-hotspot-config = "vibesensor.cli.hotspot_config:main"
vibesensor-sim = "vibesensor.adapters.simulator.sim_sender:main"
vibesensor-ws-smoke = "vibesensor.adapters.simulator.ws_smoke:main"
vibesensor-config-preflight = "vibesensor.cli.preflight:main"
vibesensor-fw-refresh = "vibesensor.use_cases.updates.firmware.firmware_cache:refresh_cache_cli"
vibesensor-fw-info = "vibesensor.use_cases.updates.firmware.firmware_cache:cache_info_cli"
vibesensor-release-fetch = "vibesensor.use_cases.updates.releases.cli:fetch_latest_wheel_cli"

[tool.setuptools.dynamic]
version = {attr = "vibesensor._version.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
vibesensor = ["static/**", "data/*.json", "data/**/*.json", "data/*.md", "data/scripted_scenarios/*.yaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vibesensor*"]

[tool.pytest.ini_options]
addopts = "-n auto --dist worksteal"
asyncio_mode = "auto"
timeout = 120
# Keep tests/ importable so shared helpers use `from test_support...` short imports.
pythonpath = [".", "tests"]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests",
    "long_sim: longer simulated-run tests (>20 s of synthetic data)",
    "smoke: minimal critical path checks",
    "benchmark: explicit performance regression benchmarks run outside default CI",
]
filterwarnings = [
    "ignore:cannot collect test class 'TestRun':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestPlan':pytest.PytestCollectionWarning",
]

[tool.ruff]
line-length = 100
# Backend Ruff formatting/lint stays on the packaged-server syntax floor
# (`requires-python >=3.13`) so the formatter does not emit syntax beyond the
# Raspberry Pi OS Lite (Trixie) runtime line. mypy tracks the exact native/CI
# Python minor from `.python-version` (`3.13` today) so type checking matches
# the active repo toolchain.
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"vibesensor/adapters/pdf/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
packages = ["vibesensor"]
follow_imports = "normal"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true

[tool.importlinter]
# Keep the package-level backend dependency direction declarative here.
# Root-level `vibesensor/*.py` shared-module rules and other repo-specific
# guardrails still live in `tools/dev/verify_backend_static_guards.py`.
root_package = "vibesensor"

[[tool.importlinter.contracts]]
name = "Domain stays isolated from outer layers"
type = "forbidden"
source_modules = ["vibesensor.domain"]
forbidden_modules = [
  "vibesensor.shared",
  "vibesensor.use_cases",
  "vibesensor.infra",
  "vibesensor.adapters",
  "vibesensor.app",
  "vibesensor.cli",
]

[[tool.importlinter.contracts]]
name = "Shared stays below service and adapter layers"
type = "forbidden"
source_modules = ["vibesensor.shared"]
forbidden_modules = [
  "vibesensor.use_cases",
  "vibesensor.infra",
  "vibesensor.adapters",
  "vibesensor.app",
  "vibesensor.cli",
]

[[tool.importlinter.contracts]]
name = "Use cases and infra stay independent"
type = "independence"
modules = ["vibesensor.use_cases", "vibesensor.infra"]

[[tool.importlinter.contracts]]
name = "Use cases stay below adapters and app entrypoints"
type = "forbidden"
source_modules = ["vibesensor.use_cases"]
forbidden_modules = [
  "vibesensor.adapters",
  "vibesensor.app",
  "vibesensor.cli",
]

[[tool.importlinter.contracts]]
name = "Infra stays below adapters and app entrypoints"
type = "forbidden"
source_modules = ["vibesensor.infra"]
forbidden_modules = [
  "vibesensor.adapters",
  "vibesensor.app",
  "vibesensor.cli",
]

[[tool.importlinter.contracts]]
name = "Adapters stay below app entrypoints"
type = "forbidden"
source_modules = ["vibesensor.adapters"]
forbidden_modules = ["vibesensor.app", "vibesensor.cli"]

[tool.deptry]
known_first_party = ["test_support"]
optional_dependencies_dev_groups = ["dev"]
package_module_name_map = { PyYAML = ["yaml"], pyserial = ["serial"], "opentelemetry-api" = ["opentelemetry"], "opentelemetry-sdk" = ["opentelemetry"] }
# ESP flashing intentionally resolves esptool via PATH / `python -m esptool`
# rather than importing it directly, so DEP002 would otherwise be a false
# positive for the optional firmware-flash extra.
per_rule_ignores = { DEP002 = ["esptool"] }

[[tool.mypy.overrides]]
module = [
  "scipy",
  "scipy.*",
  "pyfftw",
  "pyfftw.*",
  "reportlab.*",
  "yaml",
]
ignore_missing_imports = true
disallow_any_unimported = false
