[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibesensor-shared"
version = "0.1.0"
description = "Shared contracts and fixtures for VibeSensor (metrics fields, report fields, network ports)"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibesensor_shared*"]

[tool.setuptools.package-data]
"vibesensor_shared" = ["py.typed"]
